--- a/my-app/index.html
+++ b/my-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="./src/Favicon/Favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PodSphere</title>
   </head>
